[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menus/CharSelect.gd" type="Script" id=1]
[ext_resource path="res://Menus/P1.gd" type="Script" id=2]
[ext_resource path="res://Menus/P2.gd" type="Script" id=3]
[ext_resource path="res://Menus/Players.gd" type="Script" id=4]
[ext_resource path="res://Entities/GroundUnit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Avatar.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Cinzel-VariableFont_wght.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Entities/Cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/boring_title_music.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/cursor.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 7 )

[node name="CharSelect" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.117647, 0.117647, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Node" parent="."]
script = ExtResource( 4 )

[node name="P1" type="Node" parent="Players"]
script = ExtResource( 2 )

[node name="Face" parent="Players/P1" instance=ExtResource( 6 )]
position = Vector2( 350, 150 )

[node name="Circle" parent="Players/P1" instance=ExtResource( 5 )]
position = Vector2( 480, 150 )

[node name="Label" type="Label" parent="Players/P1"]
margin_left = 290.0
margin_top = 230.0
margin_right = 407.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
text = "Name 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelText" type="Label" parent="Players/P1"]
margin_left = 290.0
margin_top = 280.0
margin_right = 407.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 1 )
text = "Lives: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" parent="Players/P1" instance=ExtResource( 8 )]
position = Vector2( 237.962, 247 )
scale = Vector2( 0.8, 0.6 )

[node name="Cursor2" type="AudioStreamPlayer2D" parent="Players/P1"]
position = Vector2( 237.962, 275.003 )
stream = ExtResource( 10 )

[node name="P2" type="Node" parent="Players"]
script = ExtResource( 3 )

[node name="Face" parent="Players/P2" instance=ExtResource( 6 )]
position = Vector2( 930, 150 )
frame = 5

[node name="Circle" parent="Players/P2" instance=ExtResource( 5 )]
position = Vector2( 800, 150 )

[node name="Label" type="Label" parent="Players/P2"]
margin_left = 870.0
margin_top = 230.0
margin_right = 988.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 2 )
text = "Name 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelText" type="Label" parent="Players/P2"]
margin_left = 870.0
margin_top = 279.22
margin_right = 987.0
margin_bottom = 315.22
custom_fonts/font = SubResource( 2 )
text = "Lives: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsBot" type="Label" parent="Players/P2"]
margin_left = 870.0
margin_top = 330.0
margin_right = 1049.71
margin_bottom = 366.0
custom_fonts/font = SubResource( 2 )
text = "Bot: Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" parent="Players/P2" instance=ExtResource( 8 )]
position = Vector2( 1031.54, 247 )
rotation = 3.14159
scale = Vector2( 0.8, 0.6 )

[node name="Cursor2" type="AudioStreamPlayer2D" parent="Players/P2"]
position = Vector2( 1030.42, 273.881 )
stream = ExtResource( 10 )

[node name="Instructions" type="Label" parent="Players"]
margin_left = 486.252
margin_top = 427.154
margin_right = 823.252
margin_bottom = 619.154
custom_fonts/font = SubResource( 1 )
text = "Exit any time with ESC
P1 use WASD
P2 use Arrow Keys
Enable Bot with B
Press SPace to Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0
